[package]
name = "mkii"
version = "0.1.0"
authors = ["Nimi Wariboko Jr. <nimiwaribokoj@gmail.com>"]
edition = "2018"

[dependencies]
# futures = "0.1.23"
tokio-io-pool = { git = "https://github.com/nemosupremo/tokio-io-pool", rev="d56b5b7" }
# tokio-io-pool = { path = "/Users/nimi/rust/tokio-io-pool" }
bytes = "^0.4"
tokio = "0.2.0-alpha.4"
# tokio-io = "0.2.0-alpha.4"
# tokio-channel = "0.2.0-alpha.4"
# tokio-threadpool = "0.2.0-alpha.4"
# tokio-async-await = "0.2.0-alpha.4"
futures-core-preview = "= 0.3.0-alpha.18"
futures-channel-preview = "= 0.3.0-alpha.18"
futures-util-preview = "= 0.3.0-alpha.18"
futures-preview = "= 0.3.0-alpha.18"
seahash = "^3.0.5"
phf = { git = "http://github.com/sfackler/rust-phf", features = ["macros"], rev="0d00821785" }
lazy_static = "^1.3.0"
# tokio-async-await = "0.1.2"
md5 = "0.3.8"
thread_local = "0.3"
rand = "^0.7"
cpuprofiler = "0.0.3"
core_affinity = "0.5"
libc = "0.2.43"
memchr = "2.0.2"
byteorder = "1"
#futures-util-preview = "= 0.3.0-alpha.2"